@@ -10,7 +10,7 @@
 #	"Directory" option menu.  The user can select files by clicking on the
 #	file icons or by entering a filename in the "Filename:" entry.
 #
-# RCS: @(#) $Id: tkfbox.tcl,v 1.73 2009/04/13 21:12:52 dkf Exp $
+# RCS: @(#) $Id: tkfbox.tcl,v 1.74 2009/04/14 18:09:50 dkf Exp $
 #
 # Copyright (c) 1994-1998 Sun Microsystems, Inc.
 #
@@ -1133,7 +1133,7 @@ proc ::tk::dialog::file::Done {w {selectFilePath ""}} {
 	    && [info exists data(-filetypes)] && [llength $data(-filetypes)]
 	    && [info exists data(filterType)] && $data(filterType) ne ""
 	} then {
-	    upvar 3 $data(-typevariable) initialTypeName
+	    upvar 4 $data(-typevariable) initialTypeName
 	    set initialTypeName [lindex $data(filterType) 0]
 	}
     }
